--- a/Ionic/SqliteSyncDemo/src/pages/home/home.scss
+++ b/Ionic/SqliteSyncDemo/src/pages/home/home.scss
@@ -1,3 +1,14 @@
 page-home {
 
 }
+
+.logo{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.button{
+    color: black;
+    border-radius:5%;
+}
