Main layout footer with link added

--- a/Ionic/SqliteSyncDemo/src/app/app.scss
+++ b/Ionic/SqliteSyncDemo/src/app/app.scss
@@ -15,5 +15,5 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 .bg-style {
-    background: #478aff;
+    background: #4FAEDD;
 }
