Main layout bugs fixed

--- a/Ionic/SqliteSyncDemo/src/pages/home/home.scss
+++ b/Ionic/SqliteSyncDemo/src/pages/home/home.scss
@@ -9,6 +9,16 @@ page-home {
 }
 
 .button{
-    color: black;
+    color: #47525e;
     background-color: #fff;
+}
+
+.footer{
+    margin-bottom: 10px;
+    color:white;
+    position: fixed;
+    bottom: 0;
+    width:100%;
+    text-align: center;
+    font-size: 14px
 }
