INSERT INTO layout added

--- a/Ionic/SqliteSyncDemo/src/pages/home/home.scss
+++ b/Ionic/SqliteSyncDemo/src/pages/home/home.scss
@@ -11,6 +11,10 @@ page-home {
 .button{
     color: #47525e;
     background-color: #fff;
+    height:50px;
+    -webkit-border-radius: 12;
+    -moz-border-radius: 12;
+    border-radius: 12px;
 }
 
 .footer{
