--- a/Ionic/SqliteSyncDemo/src/pages/table/table.scss
+++ b/Ionic/SqliteSyncDemo/src/pages/table/table.scss
@@ -1,3 +1,18 @@
 page-table {
 
 }
+
+.buttonBack{
+    bottom: 5%;
+    margin-bottom: 10dp;
+    margin-left: 10dp;
+    margin-right: 10dp;
+    position: absolute;
+    width:91%;
+}
+
+.buttonAdd{
+    position: relative;
+    float:right;
+    right:8px;
+}
