--- a/Ionic/SqliteSyncDemo/src/pages/table/table.scss
+++ b/Ionic/SqliteSyncDemo/src/pages/table/table.scss
@@ -43,8 +43,8 @@ body {
 }
 
 table, td, th {
-border: 1px solid white;
-padding:0 15px 0 15px;
+border: 1px solid black;
+padding:10px 15px 10px 15px;
 }
 
 table{
