ios, xcode update

--- a/amplisync-clients/iOS/SQLiteSyncDemo/SQLiteSyncDemo/Base.lproj/Main.storyboard
+++ b/amplisync-clients/iOS/SQLiteSyncDemo/SQLiteSyncDemo/Base.lproj/Main.storyboard
@@ -1,12 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,13 +20,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sqlite_sync_logo" translatesAutoresizingMaskIntoConstraints="NO" id="s6k-bR-XGT">
-                                <rect key="frame" x="36" y="40" width="303" height="70"/>
+                                <rect key="frame" x="36" y="20" width="303" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="Tgq-QF-hw1"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sync Url" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wh5-le-mPw">
-                                <rect key="frame" x="36" y="155" width="70" height="21"/>
+                                <rect key="frame" x="36" y="135" width="70" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="70" id="tSi-JN-Pme"/>
                                 </constraints>
@@ -37,8 +34,8 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="http://demo.sqlite-sync.com:8081/SqliteSync/API3" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j6x-ls-pbG">
-                                <rect key="frame" x="114" y="140" width="225" height="50"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="https://one-million-demo.ampliapps.com/sync/API3" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j6x-ls-pbG">
+                                <rect key="frame" x="114" y="120" width="225" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="T6j-bH-NyO"/>
                                 </constraints>
@@ -47,7 +44,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F7i-1m-SOE">
-                                <rect key="frame" x="36" y="220" width="303" height="50"/>
+                                <rect key="frame" x="36" y="200" width="303" height="50"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="SO1-uo-jTe"/>
@@ -66,7 +63,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evu-0E-u1I">
-                                <rect key="frame" x="36" y="300" width="303" height="50"/>
+                                <rect key="frame" x="36" y="280" width="303" height="50"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Sq8-KP-FOK"/>
@@ -93,14 +90,14 @@
                                     <fragment content="© 2017 ">
                                         <attributes>
                                             <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="13" name="Helvetica"/>
+                                            <font key="NSFont" metaFont="user" size="13"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
                                     <fragment content="SQLite-sync.com">
                                         <attributes>
                                             <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="13" name="Helvetica"/>
+                                            <font key="NSFont" metaFont="user" size="13"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                             <integer key="NSUnderline" value="1"/>
                                         </attributes>
@@ -108,7 +105,7 @@
                                     <fragment content=" All Rights Reserved">
                                         <attributes>
                                             <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="13" name="Helvetica"/>
+                                            <font key="NSFont" metaFont="user" size="13"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
@@ -122,10 +119,10 @@
                                 </userDefinedRuntimeAttributes>
                             </textView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="V0c-2G-NrW">
-                                <rect key="frame" x="169" y="460" width="37" height="37"/>
+                                <rect key="frame" x="169" y="440" width="37" height="37"/>
                             </activityIndicatorView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="SELECT * FROM ..." borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V50-DS-JZp">
-                                <rect key="frame" x="36" y="380" width="303" height="50"/>
+                                <rect key="frame" x="36" y="360" width="303" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="951-3R-nJX"/>
                                 </constraints>
@@ -181,11 +178,11 @@
                         <viewControllerLayoutGuide type="bottom" id="elw-Yu-r4t"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="jdd-ND-NAh">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Table name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="giU-xU-zMX">
-                                <rect key="frame" x="36" y="20" width="245" height="40"/>
+                                <rect key="frame" x="36" y="0.0" width="245" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="O6i-6n-FVy"/>
                                 </constraints>
@@ -194,7 +191,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xFW-ID-9sU">
-                                <rect key="frame" x="289" y="20" width="50" height="40"/>
+                                <rect key="frame" x="289" y="0.0" width="50" height="40"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="1be-FL-veN"/>
@@ -214,7 +211,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fK4-fe-TSQ">
-                                <rect key="frame" x="36" y="597" width="303" height="50"/>
+                                <rect key="frame" x="36" y="577" width="303" height="50"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Rai-ib-hYA"/>
@@ -252,7 +249,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="135" height="38"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="gpW-P8-ijh">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="gpW-P8-ijh">
                                                             <rect key="frame" x="0.0" y="0.0" width="97" height="38"/>
                                                             <subviews>
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EH3-kV-SF4">
@@ -345,11 +342,11 @@
                         <viewControllerLayoutGuide type="bottom" id="VMg-h6-Ml7"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="I35-KR-YkZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* Leave identity column unchanged * For date columns follow format:      'yyyy-MM-dd HH:mm:ss'" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ghz-Wz-JdA">
-                                <rect key="frame" x="36" y="587" width="303" height="60"/>
+                                <rect key="frame" x="36" y="567" width="303" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="0MH-5q-bFf"/>
                                 </constraints>
@@ -358,13 +355,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Table name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fN-gP-nzQ">
-                                <rect key="frame" x="36" y="28" width="303" height="21.5"/>
+                                <rect key="frame" x="36" y="8" width="303" height="21.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="vvI-I2-iGx">
-                                <rect key="frame" x="36" y="517" width="303" height="50"/>
+                                <rect key="frame" x="36" y="497" width="303" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHR-5w-Edu">
                                         <rect key="frame" x="0.0" y="0.0" width="151.5" height="50"/>
@@ -404,10 +401,10 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OxI-kN-Tzt">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OxI-kN-Tzt">
                                 <rect key="frame" x="36" y="58" width="303" height="434"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="lRK-Zr-aLp">
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="lRK-Zr-aLp">
                                         <rect key="frame" x="0.0" y="0.0" width="303" height="51"/>
                                     </stackView>
                                 </subviews>
